--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col-8 ml-auto mr-auto">
 					<h2 class="about-h2">Обо мне</h2>
 					<p>Добрый день! Меня зовут Георгий Сергеев.</p>
-					<p>Я специализируюсь на создании анимационных и статичных web баннеров (html5, гиф, статика, ресайзы). Работаю в Adobe Animate, Adobe Photoshop, Adobe Illustrated, Corel Draw.</p>
+					<p>Я специализируюсь на создании анимационных и статичных web баннеров (html5, гиф, статика, ресайзы). Работаю в Adobe Animate, Adobe Photoshop, Adobe Illustrator, Corel Draw.</p>
 					<p>Изготавливаю баннеры по техническим требованиям площадок в течении рабочего дня. Имею опыт удаленной работы с интернет агентствами.</p>
 					<p>Если в вашей компании привлекают для разработки баннеров дизайнеров в режиме удаленной работы - буду рад предложить свои услуги. Готов выполнить тестовое задание.</p>
 					<p>Контакты для связи:<br>
