--- a/portfolio/html/hyundai/hyundai-x240.html
+++ b/portfolio/html/hyundai/hyundai-x240.html
@@ -11,37 +11,82 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>x240</title>
+<title>hyundai-x240</title>
+<script type="text/javascript" src="//banners.adfox.ru/files/adfox_HTML5.js"></script>
 <!-- write your code here -->
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="x240.js"></script>
+<script src="hyundai-x240.js?1523603721160"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
 	dom_overlay_container = document.getElementById("dom_overlay_container");
-	images = images||{};
+	var comp=AdobeAn.getComposition("FF240FFF70D6524182A85E019A458735");
+	var lib=comp.getLibrary();
 	var loader = new createjs.LoadQueue(false);
-	loader.addEventListener("fileload", handleFileLoad);
-	loader.addEventListener("complete", handleComplete);
+	loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
+	loader.addEventListener("complete", function(evt){handleComplete(evt,comp)});
+	var lib=comp.getLibrary();
 	loader.loadManifest(lib.properties.manifest);
 }
-function handleFileLoad(evt) {	
-	if (evt.item.type == "image") { images[evt.item.id] = evt.result; }	
+    var flashVars = {
+      reference: "%request.reference%",
+      link: "%banner.user1%",
+      target: "%banner.target%",
+      rnd: parseInt("%request.place_random%") || parseInt("%system.random%"),
+      events: [
+            "",
+            "%banner.event1%",
+            "%banner.event2%",
+            "%banner.event3%",
+            "%banner.event4%",
+            "%banner.event5%",
+            "%banner.event6%",
+            "%banner.event7%",
+            "%banner.event8%",
+            "%banner.event9%",
+            "%banner.event10%",
+            "%banner.event11%",
+            "%banner.event12%",
+            "%banner.event13%",
+            "%banner.event14%",
+            "%banner.event15%",
+            "%banner.event16%",
+            "%banner.event17%",
+            "%banner.event18%",
+            "%banner.event19%",
+            "%banner.event20%",
+            "%banner.event21%",
+            "%banner.event22%",
+            "%banner.event23%",
+            "%banner.event24%",
+            "%banner.event25%",
+            "%banner.event26%",
+            "%banner.event27%",
+            "%banner.event28%",
+            "%banner.event29%",
+            "%banner.event30%"
+      ]
+    };
+function handleFileLoad(evt, comp) {
+	var images=comp.getImages();	
+	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
 }
-function handleComplete(evt) {
+function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
+	var lib=comp.getLibrary();
+	var ss=comp.getSpriteSheet();
 	var queue = evt.target;
 	var ssMetadata = lib.ssMetadata;
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.x240();
-	stage = new createjs.Stage(canvas);
-	stage.addChild(exportRoot);	
+	exportRoot = new lib.hyundaix240();
+	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
+		stage.addChild(exportRoot);
 		createjs.Ticker.setFPS(lib.properties.fps);
 		createjs.Ticker.addEventListener("tick", stage);
 	}	    
@@ -75,10 +120,14 @@ function handleComplete(evt) {
 			canvas.style.height = anim_container.style.height = dom_overlay_container.style.height = h*sRatio+'px';
 			stage.scaleX = pRatio*sRatio;			
 			stage.scaleY = pRatio*sRatio;			
-			lastW = iw; lastH = ih; lastS = sRatio;		
+			lastW = iw; lastH = ih; lastS = sRatio;            
+			stage.tickOnUpdate = false;            
+			stage.update();            
+			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(false,'both',false,2);	
+	makeResponsive(false,'both',false,1);	
+	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
 </script>
