--- a/index.html
+++ b/index.html
@@ -80,37 +80,311 @@
 				</div>
 			</div>
 
-		</div>	
-		
+		</div>
+
 		<div class="container-fluid">
 			<div class="row">
 				<div class="banner-box-full">
-					<iframe src="portfolio/html/telta-mart/new-teltax250-retina.html" width="100%" height="245px" align="center" frameborder="0"></iframe>
+					<iframe src="portfolio/html/7star/7star-1911-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Спа-салон «7 звёзд»</p>	
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/aqva/aqva-0319-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / «Акватория» Термальный комплекс</p>
 				</div>
 			</div>
 		</div>	
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/astra/astra-1911-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Жилой комплекс «Астра»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/bk/bizkl-0419-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Жилищный комплекс «Гулливер»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/dilos/dls-1912-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Компания «Дилос-Экстрим»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/edro/edro1-08-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Общественная приемная «Единая Россия»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/flex/smile-0219-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Стоматологическая клиника «Линия Улыбки»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/ford/ford-011-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Автосалон «Форд Центр Юг»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/gensk/wsh-0819-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Промо-акция «Женские штучки»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/gull/glw-pp-0619-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Жилищный комплекс «Гулливер»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/hl/hl-2003-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Жилищный комплекс «Head Liner»</p>
+				</div>
+			</div>
+		</div>
 
 		<div class="container-fluid">
 			<div class="row">
 				<div class="banner-box-full">
 					<iframe src="portfolio/html/hyundai/hyundai-x240.html" width="100%" height="240px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х240 px / Автосалон «Дав Авто»</p>
 				</div>
 			</div>
 		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/ivk/ni-2001-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Санаторий «Нижне-Ивкино»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/nado/nadomarket-2002-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Промо-акция магазина «Надомаркет»</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/permenergo/pe-1911-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Промо-акция «Пермэнерго»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/RCF/rcf-0819-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Промо-акция магазина «RCF Старт»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/scan/scan-0719-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Жилищный комплекс «Скандинавия»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/t/t-2003-x250.html" width="100%" height="250px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х250 px / Промо-акция «Пермэнергосбыт»</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="banner-box-full">
+					<iframe src="portfolio/html/telta-mart/new-teltax250-retina.html" width="100%" height="245px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 100%х245 px / Автосалон «Телта МБ»</p>
+				</div>
+			</div>
+		</div>	
+
+
+
+		
 
 		<div class="container">
 
 			<div class="row">
 				<div class="col-12 pzsp-mart">
-					<iframe src="portfolio/html/pzsp-mart/pzsp-mart--240x400.html" width="240px" height="400px" align="center" frameborder="0"></iframe>
+					<iframe src="portfolio/html/alfa/acz10-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Медцентр «Альфа-Центр Здоровья»</p>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-12 pzsp-april">
-					<iframe src="portfolio/html/pzsp-april/pzsp-bf-300x250.html" width="300px" height="250px" align="center" frameborder="0"></iframe>
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/allians/af03-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Центр французского языка «Альянс Франсез - Пермь»</p>
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/antvar/avrk-0819-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Клиника лазерной хирургии «Варикоза Нет»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/ay/ai1910-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Санаторий «Ай»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/diomid/dmd-2002-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Стоматология «Диомид»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/gebr/gbr1912-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Горнолыжный комплекс «Жебреи»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/guber/meg01-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Жилищный комплекс «Губерния»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/HappyCafe/hc2001-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Кафе «Happy Кафе»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/lada/lada1219-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Автосалон «Лада Центр Пермь»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/legenda/meg03-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Жилищный комплекс «Легенда»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/peplos/peplos-04-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Промо-акция магазина «Пеплос»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/pfm/pmf-1904-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Аптечная сеть «Пермфармация»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/pogoda/dev-0819-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Жилищный комплекс «Погода»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/profs/prof-10-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Санкт-Петербургский Гуманитарный университет профсоюзов</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/pzsp-2020-1/pzsp-2002-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Жилищный комплекс «ПЗСП Кисловодская 12»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/pzsp-2020-2/pzsp-0219-240x400.html" width="240px" height="400px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Земельные участки «ПЗСП Троицкая усадьба»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/zenit/meg04-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Жилищный комплекс «Зенит»</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 pzsp-mart">
+					<iframe src="portfolio/html/zol/zvetok-04-240x600.html" width="240px" height="600px" align="center" frameborder="0"></iframe>
+					<p class="descr">Баннер 240х600 px / Ювелирный салон «Зенит»</p>
+				</div>
+			</div>
+
 
 			<hr id="gifhref" class="col-8 ml-auto mr-auto">
 
